--- a/package.json
+++ b/package.json
@@ -9,9 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
+    "@openzeppelin/contracts": "^4.3.2",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@splidejs/react-splide": "^0.6.8",
+    "@truffle/contract": "^4.3.39",
+    "@truffle/hdwallet-provider": "^1.6.0",
+    "@types/react-redux": "^7.1.20",
+    "emailjs-com": "^3.2.0",
+    "i18next": "^21.4.2",
+    "mongodb": "^4.1.4",
     "next": "12.0.3",
+    "parse-json": "^2.2.0",
+    "pick-random": "^4.0.0",
+    "plain-text-data-to-json": "^2.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.14.1",
+    "react-notifications": "^1.7.2",
+    "react-redux": "^7.2.6",
+    "react-toastify": "^8.1.0",
+    "sha256": "^0.2.0",
+    "web3": "^1.5.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
